# fibi-proxy

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
.github/workflows/: build_n_test.yml  codecov.yml  dockerhub_build_n_publish.yml  rust.yml
src/: cli.rs  lib.rs  main.rs
src/commands/: connect_vanilla.rs  mod.rs  relayed_inplace_add.rs
src/commands/relay/: inplace_add.rs  mod.rs
src/srv/: dispatch.rs  mod.rs  server.rs
tests/: cli_args.rs  proxy.rs
tests/cli_args_data/: stdout_help_long.txt
tests/ssl_certs/: self_signed_localhost_cert.pem  self_signed_localhost_key.pem
