[package]
name = "fibi-proxy"
version = "0.0.1"
edition = "2021"

[dependencies]
eyre = "0.6"
color-eyre = "0.6"
tokio = { version = "1.36" , features=["full"]}
clap = { version = "4.5", features = ["derive"] }
tracing ="0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing-error= "0.2"
uuid = { version = "1.7", features = ["v4"] }
thiserror = "1.0"
base64 = "0.21"
memchr = "2.7"
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
pretty_assertions ="1.4"
pretty-hex ="0.4"
xshell = "0.2"
isahc = "1.7"
assert_cmd = "2.0"
expect-test = "1.4"
