[package]
name = "fibi-proxy"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
eyre = "0.6"
color-eyre = "0.6"
tokio = { version = "1.36" , features=["full"]}
clap = { version = "4.5", features = ["derive"] }
tracing ="0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing-error= "0.2"
uuid = { version = "1.7", features = ["v4"] }
thiserror = "1.0"
base64 = "0.21"
memchr = "2.7"
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
pretty_assertions ="1.4"
pretty-hex ="0.4"
xshell = "0.2"
isahc = "1.7"
assert_cmd = "2.0"
expect-test = "1.4"
http = "1"
tokio = {version="1.0", features=["full"]}
tokio-rustls = { version = "0.25", default-features = false }
hyper = { version = "1.2"}
pki-types = { package = "rustls-pki-types", version = "1.3" }
http-body-util = "0.1"
hyper-util = { version = "0.1", default-features = false, features = ["server-auto","client-legacy", "tokio"] }
rustls = { version = "0.22", default-features = false, features = ["tls12","ring"] }
rustls-pemfile = "2.1"
