[package]
name = "fibi-proxy"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
memchr = "2.7"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
tokio = { version = "1.36" , features=["full"]}
tracing ="0.1"
tracing-error= "0.2"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
uuid = { version = "1.7", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0"
expect-test = "1.4"
http = "1"
http-body-util = "0.1"
hyper = { version = "1.2"}
hyper-util = { version = "0.1", default-features = false, features = ["server-auto", "client-legacy", "tokio"] }
pki-types = { package = "rustls-pki-types", version = "1.3" }
pretty-hex ="0.4"
pretty_assertions ="1.4"
reqwest = "0.11"
rustls = { version = "0.22", default-features = false, features = ["tls12", "ring"] }
rustls-pemfile = "2.1"
tokio-rustls = { version = "0.25", default-features = false }
